--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -31,6 +31,7 @@ label
 		color: $text-500
 		font-size: 15px
 		font-weight: $w-regular
+		line-height: 1.5
 		transition: border-color .2s ease-in-out, box-shadow .2s ease-in-out, background-color .3s ease-in-out
 		&:focus
 			box-shadow: 0 0 0 3px rgba($yellow, 0.25)
@@ -40,7 +41,6 @@ label
 		height: 64px
 		padding-left: 16px
 		padding-right: 16px
-		line-height: 64px
 		&--number
 			-moz-appearance: textfield
 			&::-webkit-outer-spin-button,
@@ -92,6 +92,9 @@ label
 			opacity: 1
 
 	// Form group
+	&:not(.form-inline)
+		.form-group
+			margin-bottom: 24px
 	&-group
 		.switch-input-mask
 			margin-top: 10px
@@ -131,7 +134,7 @@ label
 			display: block
 			width: 100%
 			margin-bottom: 0
-			border: 1px solid transparent
+			border: 1px solid $trsp
 			color: $text-400
 			font-size: 15px
 			line-height: 1.5
@@ -152,7 +155,7 @@ label
 				padding-bottom: 3px
 		input, label
 			height: 48px
-			padding: .75rem
+			padding: 12px
 	.form-control,
 	.btn-submit
 		height: 48px
