--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,6 +1,7 @@
 @import "helpers/helpers"
 @import "vendors/bootstrap"
 @import "vendors/swiper"
+@import "vendors/fancybox"
 @import "common/common"
 @import "modules/**/*"
 @import "components/**/*"
