--- a/app/sass/modules/_footer.sass
+++ b/app/sass/modules/_footer.sass
@@ -1,4 +1,6 @@
-// Section: Questions left?
+/* ==========================================================================
+	 Section: Questions left?
+	 ========================================================================== */
 .f-questions
 	&-descr
 		color: $text-400
@@ -8,7 +10,9 @@
 		margin: 0 auto
 
 
-// Site footer
+/* ==========================================================================
+	 Site footer
+	 ========================================================================== */
 .footer
 	position: relative
 	background-color: $text-500
