--- a/app/sass/pages/home.sass
+++ b/app/sass/pages/home.sass
@@ -120,6 +120,9 @@
 			> [class*="col"]
 				flex-basis: 45%
 				max-width: 45%
+				+media-breakpoint-down(xs)
+					flex-basis: 70%
+					max-width: 70%
 	&-item
 		padding: 8px
 		.picture
