Shop catalog page. Code refactoring.

--- a/app/sass/common/_typography.sass
+++ b/app/sass/common/_typography.sass
@@ -1,5 +1,3 @@
-@import '../helpers/helpers'
-
 /* ==========================================================================
 	 Text aligns
 	 ========================================================================== */
@@ -9,6 +7,13 @@
 	text-align: center
 .text-right
 	text-align: right
+
+
+/* ==========================================================================
+	 Text transform
+	 ========================================================================== */
+.text-uppercase
+	text-transform: uppercase
 
 
 /* ==========================================================================
