--- a/app/sass/components/_labels.sass
+++ b/app/sass/components/_labels.sass
@@ -8,6 +8,8 @@
 	+font-size(xxs)
 	font-weight: $w-medium
 	transition: all .15s ease
+	+media-breakpoint-down(xxs)
+		font-size: 12px
 	&--yellow
 		background-color: $yellow
 		color: $text-500
