--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -1,5 +1,3 @@
-@import '../helpers/helpers'
-
 +media-breakpoint-up(lg)
 	.scrollbar
 		*
@@ -130,6 +128,9 @@ hr
 	stroke-width: 0
 	stroke: currentColor
 	fill: currentColor
+
+.w-100
+	width: 100%
 
 
 /* ==========================================================================
