--- a/app/sass/components/_breadcrumbs.sass
+++ b/app/sass/components/_breadcrumbs.sass
@@ -1,5 +1,3 @@
-@import '../helpers/helpers'
-
 .breadcrumbs
 	margin-top: 8px
 	&-list
@@ -9,29 +7,17 @@
 		> li
 			display: inline-flex
 			align-items: center
-			line-height: 1.5
-			&:not(:last-child)
-				&::after
-					content: ''
-					display: inline-block
-					vertical-align: middle
-					width: 15px
-					height: 1px
-					margin: 0 10px
-					background-color: #bbb
+			color: $text-400
+			&:not(:last-child)::after
+				content: '/'
+				display: inline-block
+				vertical-align: middle
+				margin: 0 16px
+				+font-size(xxs)
 			> a
-				color: #8c8c8c
-				font-size: 15px
-				font-weight: 200
-				&.home
-					width: 16px
-					height: 16px
-					background: url('#') no-repeat center/16px
-					&:hover
-						opacity: 0.75
+				color: $text-400
 				&:hover
-					color: $yellow
+					color: $blue
+			> a,
 			> span
-				color: #8c8c8c
-				font-size: 15px
-				font-weight: 200
+				+font-size(xxs)
