--- a/app/sass/modules/_footer.sass
+++ b/app/sass/modules/_footer.sass
@@ -1,3 +1,5 @@
+@import '../helpers/helpers'
+
 /* ==========================================================================
 	 Section: Questions left?
 	 ========================================================================== */
