--- a/app/sass/modules/_header.sass
+++ b/app/sass/modules/_header.sass
@@ -1,3 +1,5 @@
+@import '../helpers/helpers'
+
 /* ==========================================================================
 	 Shop Promo
 	 ========================================================================== */
@@ -10,6 +12,8 @@
 	&-content
 		+font-size(xs)
 		text-align: center
+		+media-breakpoint-down(sm)
+			+font-size(xxs)
 		p
 			margin-bottom: 0
 			color: $white
@@ -143,10 +147,10 @@
 		padding-top: 24px
 		padding-bottom: 24px
 		+media-breakpoint-down(xl)
-			padding-bottom: 8px
+			border-bottom: 1px solid $border
 		+media-breakpoint-down(sm)
 			padding-top: 12px
-			padding-bottom: 0
+			padding-bottom: 12px
 
 		.container
 			position: relative
