Shop -sub/category pages. Shop filters.

--- a/app/sass/components/_dropdown.sass
+++ b/app/sass/components/_dropdown.sass
@@ -3,7 +3,7 @@
 		.btn-dropdown
 			color: $blue
 			&::after
-				transform: rotate(180deg)
+				transform: scaleY(-1)
 
 	&-menu
 		position: relative
