--- a/app/sass/components/_labels.sass
+++ b/app/sass/components/_labels.sass
@@ -13,6 +13,9 @@
 	&--yellow
 		background-color: $yellow
 		color: $text-500
+	&--orange
+		background-color: #F8762D
+		color: $white
 	&--red
 		background-color: $warning
 		color: $white
