--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -2,6 +2,7 @@
 @import "vendors/bootstrap"
 @import "vendors/swiper"
 @import "vendors/fancybox"
+@import "vendors/nouislider"
 @import "common/common"
 @import "modules/**/*"
 @import "components/**/*"
