--- a/app/sass/modules/_footer.sass
+++ b/app/sass/modules/_footer.sass
@@ -4,6 +4,9 @@
 	 Section: Questions left?
 	 ========================================================================== */
 .f-questions
+	+media-breakpoint-down(sm)
+		padding-top: 24px
+		padding-bottom: 24px
 	&-descr
 		color: $text-400
 	&-form
