--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -1,17 +1,124 @@
 @import '../helpers/helpers'
 
 /* ==========================================================================
+	 Shop Filters
+	 ========================================================================== */
+.shop-filters
+	// Heading
+	&-heading
+		+media-breakpoint-down(md)
+			display: flex
+			align-items: center
+			justify-content: space-between
+			margin-bottom: 24px
+			.title
+				font-size: 20px
+				font-weight: $w-bold
+				line-height: 24px
+		.btn-close
+			+media-breakpoint-up(lg)
+				display: none
+
+	// Base customize
+	.filter
+		&-item
+			&:not(:last-child)
+				margin-bottom: 24px
+		&-header
+			display: flex
+			align-items: center
+			.btn-dropdown
+				padding-left: 26px
+				+font-size(xs)
+				&:hover
+					color: $blue
+				&::after
+					position: absolute
+					left: 0
+					margin-left: 0
+					margin-right: 8px
+					background-size: 24px
+				&:not(.collapsed)::after
+					transform: scaleY(-1)
+			.hint
+				position: relative
+				display: flex
+				width: 16px
+				height: 16px
+				margin-left: 6px
+				border-radius: 50%
+				background-color: $text-300
+				transition: background-color .3s ease
+				&::after
+					content: '?'
+					position: absolute
+					top: 50%
+					left: 50%
+					color: $white
+					font-size: 13px
+					font-weight: $w-bold
+					transform: translate(-50%, -50%)
+					transition: color .3s ease
+				&:hover
+					cursor: help
+					background-color: $yellow
+					&::after
+						color: $text-500
+		&-collapse
+		&-body
+			padding-top: 12px
+			.form-checkbox
+				&:last-child
+					.form-checkbox-label
+						margin-bottom: 0
+				&-label
+					padding-right: 16px
+		&-more
+			&-btn
+				height: auto
+				margin-left: 30px
+				padding-left: 0
+				padding-right: 0
+				color: $blue
+				+font-size(xxs)
+				font-weight: $w-regular
+				&:hover
+					color: $green
+				~ .filter-more-content
+					display: none
+
+	// Range slider
+	.filter-slider
+		&-handle
+			padding-left: 9px
+			padding-right: 9px
+		&-range
+			display: flex
+			align-items: center
+			margin-top: 18px
+			line-height: 1
+			.form-control
+				height: 48px
+		&-from
+			margin-right: 8px
+
+
+/* ==========================================================================
 	 Shop Settings (Sorting, products display etc.)
 	 ========================================================================== */
 .shop-settings
-	margin-top: 40px
-	margin-bottom: 56px
+	margin-bottom: 40px
+	+media-breakpoint-down(lg)
+		margin-bottom: 32px
+	+media-breakpoint-down(sm)
+		margin-bottom: 24px
 	&-wrapper
 		display: flex
 		flex-wrap: wrap
 		align-items: center
 		justify-content: space-between
 	&-row
+		position: relative
 		display: flex
 		align-items: center
 		justify-content: space-between
@@ -37,7 +144,7 @@
 			margin-right: 20px
 			color: $text-400
 			+font-size(xs)
-			+media-breakpoint-down(lg)
+			+media-breakpoint-down(xl)
 				+font-size(xxs)
 		&-list
 			display: inline-flex
@@ -47,7 +154,7 @@
 				border-radius: 4px
 				color: $text-500
 				+font-size(xs)
-				+media-breakpoint-down(lg)
+				+media-breakpoint-down(xl)
 					+font-size(xxs)
 				&._active
 					pointer-events: none
@@ -55,7 +162,7 @@
 					color: $text-500
 				&:not(:last-child)
 					margin-right: 20px
-					+media-breakpoint-down(lg)
+					+media-breakpoint-down(xl)
 						margin-right: 10px
 				&:hover:not(._active)
 					color: $blue
@@ -83,10 +190,38 @@
 				&:not(:last-child)
 					margin-bottom: 8px
 
+	// Tool: Filter
+	.s-filter
+		+media-breakpoint-up(lg)
+			display: none
+		&-btn
+			height: auto
+			padding: 4px
+			&:hover
+				> span
+					color: $green
+				> .icon
+					fill: $green
+			> span
+				color: $text-400
+				+font-size(xxs)
+				font-weight: $w-regular
+				transition: color .3s ease
+			> .icon
+				width: 20px
+				height: 20px
+				fill: $text-300
+				transition: fill .3s ease
+
 	// Tool: View
 	.s-view
 		display: flex
 		align-items: center
+		+media-breakpoint-down(xs)
+			position: absolute
+			z-index: 1
+			top: calc(100% + 6px)
+			right: 0
 		&-label
 			flex: 0 0 auto
 			margin-right: 15px
@@ -111,21 +246,22 @@
 	// Found products
 	.s-found
 		display: inline-flex
-		+media-breakpoint-down(xxs)
+		+media-breakpoint-down(xs)
 			order: 1
 			margin-top: 24px
 		&-label
 			margin-right: 4px
 			color: $text-400
 		&-value
-			+media-breakpoint-down(xxs)
+			+media-breakpoint-down(xs)
 				font-weight: $w-regular
 
 	// Show products
 	.s-show
 		flex: 0 0 auto
 		display: inline-flex
-		+media-breakpoint-down(xxs)
+		+media-breakpoint-down(xs)
+			flex-basis: 100%
 			order: 0
 		&-label
 			margin-right: 10px
@@ -149,3 +285,62 @@
 			&._selected
 				pointer-events: none
 				color: $text-500
+
+
+/* ==========================================================================
+	 Shop Categories
+	 ========================================================================== */
+.shop-categories,
+.shop-collections
+	&-wrapper
+		margin: -4px
+	&-item
+		padding: 4px
+		.category,
+		.collection
+			overflow: hidden
+			display: flex
+			align-items: center
+			padding: 16px
+			border: 1px solid $text-200
+			background-color: $background
+			+media-breakpoint-down(sm)
+				padding: 12px
+			+media-breakpoint-down(xs)
+				padding: 8px
+			&._current
+				pointer-events: none
+				border-color: $trsp
+				background-color: $yellow
+			&:hover
+				border-color: $trsp
+				background-color: $yellow
+			&-photo
+				flex: 0 0 auto
+				width: 46px
+				height: 46px
+				margin-right: 16px
+				+media-breakpoint-down(sm)
+					width: 32px
+					height: 32px
+				+media-breakpoint-down(xs)
+					width: 24px
+					height: 24px
+			&-title
+				color: $text-500
+				+font-size(xxs)
+				word-break: break-all
+				+media-breakpoint-down(xs)
+					word-break: normal
+		.category
+			height: 80px
+			+media-breakpoint-down(sm)
+				height: 60px
+			+media-breakpoint-down(xs)
+				height: 100%
+		.collection
+			justify-content: center
+			text-align: center
+
+
+
