Search results page. Wishlist & Compare pages. Code refactoring.

--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -13,7 +13,8 @@
 /* ==========================================================================
 	 Product card
 	 ========================================================================== */
-.products-slider
+.products-slider,
+.compare-products-slider
 	.card-product::before,
 	.card-attributes
 		display: none
