--- a/app/sass/components/_modals.sass
+++ b/app/sass/components/_modals.sass
@@ -190,6 +190,7 @@
 						justify-content: center
 						max-height: 424px
 						.photo
+							user-select: none
 							&::before
 								content: ''
 								position: absolute
@@ -225,6 +226,7 @@
 					.swiper-wrapper
 						justify-content: center
 					.swiper-slide
+						user-select: none
 						position: relative
 						display: flex
 						align-items: center
