--- a/app/sass/modules/_aside.sass
+++ b/app/sass/modules/_aside.sass
@@ -14,6 +14,7 @@
 		right: 0
 		bottom: 0
 		z-index: 999
+		margin-right: 0
 		padding: 24px 32px
 		background-color: $white
 		visibility: hidden
