--- a/app/sass/modules/_section.sass
+++ b/app/sass/modules/_section.sass
@@ -29,6 +29,5 @@
 			position: relative
 			display: inline-block
 			margin-bottom: 0
-			padding-left: 16px
-			padding-right: 16px
+			padding: 8px 16px
 			background-color: $white
