--- a/app/sass/common/_base.sass
+++ b/app/sass/common/_base.sass
@@ -114,7 +114,9 @@ hr
 .w-100
 	width: 100%
 
-
-/* ==========================================================================
-   Animations
-   ========================================================================== */
+@media print
+	header.header,
+	.f-questions,
+	footer.footer,
+	.breadcrumbs
+		display: none
