--- a/app/sass/modules/_shop.sass
+++ b/app/sass/modules/_shop.sass
@@ -1,6 +1,21 @@
 @import '../helpers/helpers'
 
 /* ==========================================================================
+	 Shop message
+	 ========================================================================== */
+.shop-message
+	padding: 16px
+	border-radius: 4px
+	+font-size(xxs)
+	> p:last-child
+		margin-bottom: 0
+	&--yellow
+		background-color: rgba($yellow, 0.1)
+	&--blue
+		background-color: $background
+
+
+/* ==========================================================================
 	 Shop Filters
 	 ========================================================================== */
 .shop-filters
@@ -40,30 +55,6 @@
 					background-size: 24px
 				&:not(.collapsed)::after
 					transform: scaleY(-1)
-			.hint
-				position: relative
-				display: flex
-				width: 16px
-				height: 16px
-				margin-left: 6px
-				border-radius: 50%
-				background-color: $text-300
-				transition: background-color .3s ease
-				&::after
-					content: '?'
-					position: absolute
-					top: 50%
-					left: 50%
-					color: $white
-					font-size: 13px
-					font-weight: $w-bold
-					transform: translate(-50%, -50%)
-					transition: color .3s ease
-				&:hover
-					cursor: help
-					background-color: $yellow
-					&::after
-						color: $text-500
 		&-collapse
 		&-body
 			padding-top: 12px
@@ -72,7 +63,10 @@
 					.form-checkbox-label
 						margin-bottom: 0
 				&-label
+					min-height: 20px
+					padding-top: 2px
 					padding-right: 16px
+					+font-size(xxs)
 		&-more
 			&-btn
 				height: auto
