Cart/Checkout (part 2 of 2). Order complete page.

--- a/app/sass/components/_forms.sass
+++ b/app/sass/components/_forms.sass
@@ -135,11 +135,14 @@ label
 			padding-top: 2px
 			margin-bottom: 0
 			padding-left: 32px
+			padding-right: 20px
 			color: $text-500
 			font-size: 15px
 			line-height: 20px
-			sup
+			> sup
 				color: $text-400
+			> .hint
+				margin-left: -14px
 			&::before
 				content: ''
 				flex: 0 0 auto
